--- a/data/contact.yml
+++ b/data/contact.yml
@@ -3,21 +3,21 @@ contact:
   enable : true
   # office
   office:
-    title : "YES"
-    content : "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna"
+    title : "Консультация"
+    content : "Мы заинтересованны в наших клиентах."
     # other information comes from "config.toml"
 
   # opennig hour
   opennigHour:
-    title : "Opening Hours"
+    title : "Часы приёма заказов"
     dayTimeList:
-      - dayTime : "Monday: 9:00 – 19:00"
-      - dayTime : "Tuesday: 9:00 – 19:00"
-      - dayTime : "Wednesday: 9:00 – 19:00"
-      - dayTime : "Thursday: 9:00 – 19:00"
-      - dayTime : "Friday: 9:00 – 19:00"
-      - dayTime : "Saturday: 9:00 – 19:00"
-      - dayTime : "sunday: 9:00 – 19:00"
+      - dayTime : "Понедельник: 9:00 – 19:00"
+      - dayTime : "Вторник: 9:00 – 19:00"
+      - dayTime : "Среда: 9:00 – 19:00"
+      - dayTime : "Четверг: 9:00 – 19:00"
+      - dayTime : "Пятничка: 9:00 – 19:00"
+      - dayTime : "Суббота: 9:00 – 19:00"
+      - dayTime : "Воскресенье: 9:00 – 19:00"
 
 ####################### google map ########################
 map:
