--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ disqusShortname = ""
   weight = 3
   
   [[menu.main]]
-  name = "Contact"
+  name = "Контакты"
   URL = "contact"
   weight = 4
 
@@ -69,12 +69,12 @@ disqusShortname = ""
   weight = 3
   
   [[menu.footer]]
-  name = "Terms & Conditions"
+  name = "Конфиденциальность"
   URL = "terms-conditions"
   weight = 4
   
   [[menu.footer]]
-  name = "Contact"
+  name = "Контакты"
   URL = "contact"
   weight = 5
 
