--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -19,7 +19,7 @@ banner:
 about:
   enable : true
   title : "Наши товары"
-  content : "Сыворотка разработана специалистами известного корейского бренда Dr. Jart+ для ухода за кожей лица. Создана на основе экстракта центеллы азиатской и ниацинамида."
+  content : "Сыворотка разработана;p специалистами известного корейского бренда Dr. Jart+ для ухода за кожей лица. Создана на основе экстракта центеллы азиатской и ниацинамида."
   image : "images/about.png"
 
 
